--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,14 @@ dependencies:
     sdk: flutter
 
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   dartz: ^0.10.0-nullsafety.1
   freezed_annotation: ^0.14.1
+  flutter_bloc: ^7.0.0
+  bloc: ^7.0.0
 
 dev_dependencies:
-  build_runner: ^1.12.2
+  build_runner: ^2.0.2
   freezed: ^0.14.1+1
   flutter_test:
     sdk: flutter
