--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   freezed_annotation: ^0.14.1
   flutter_bloc: ^7.0.0
-  bloc: ^7.0.0
+  firebase_auth: ^1.1.3
+  firebase_core: ^1.1.0
+  google_sign_in: ^5.0.2
 
 dev_dependencies:
   build_runner: ^2.0.2
