--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,23 +21,29 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.3
+  dartz: ^0.10.0-nullsafety.1
+  firebase_auth: ^1.1.3
+  firebase_core: ^1.1.0
+
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^1.0.3
-  dartz: ^0.10.0-nullsafety.1
-  freezed_annotation: ^0.14.1
   flutter_bloc: ^7.0.0
-  firebase_auth: ^1.1.3
-  firebase_core: ^1.1.0
+  freezed_annotation: ^0.14.1
+  get_it: ^6.1.1
   google_sign_in: ^5.0.2
+  injectable: ^1.3.0
+  lint: ^1.5.3
 
 dev_dependencies:
   build_runner: ^2.0.2
-  freezed: ^0.14.1+1
+  
   flutter_test:
     sdk: flutter
+    
+  freezed: ^0.14.1+1
+  injectable_generator: ^1.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
